fixed preloader on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,7 @@ body {
   to {
     top: 100%;
     z-index: -10;
+    display: none;
   }
 }
 
